Correct treatment of mate values in transposition table.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -3,6 +3,7 @@
 # 								     #
 # Copyright Matthew Gingell <gingell@adacore.com>, 2009. Chesley the #
 # Chess Engine! is free software distributed under the terms of the  #
+# GNU Public License.                                                #
 ######################################################################
 
 SHELL = /bin/sh
