Restructure eval code, moving tables and logic into their own separate files.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -34,7 +34,7 @@ CXXFLAGS = -g $(OPT) $(ALG) $(INC) $(LIBS) $(VSN) $(WARN)
 
 ALG = -DENABLE_QSEARCH -DENABLE_PVS -DENABLE_ASPIRATION_WINDOW	\
 -DENABLE_NULL_MOVE -DENABLE_EXTENSIONS -DENABLE_TRANS_TABLE	\
--DENABLE_LMR # -DENABLE_SEE -DENABLE_FUTILITY
+-DENABLE_LMR -DENABLE_FUTILITY # -DENABLE_SEE
 
 ################
 # Main binary. #
