--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -36,7 +36,7 @@ CXXFLAGS = $(OPT) $(ALG) $(INC) $(LIBS) $(VSN) $(WARN) $(DEBUG)
 
 ALG = -DENABLE_QSEARCH -DENABLE_PVS -DENABLE_ASPIRATION_WINDOW	\
 -DENABLE_NULL_MOVE -DENABLE_EXTENSIONS -DENABLE_TRANS_TABLE	\
--DENABLE_LMR -DENABLE_FUTILITY # -DENABLE_SEE
+-DENABLE_FUTILITY -DENABLE_LMR # -DENABLE_SEE
 
 DEBUG = # -DTRACE_EVAL
 
