Some improvements in transposition table management.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -11,7 +11,7 @@ SHELL = /bin/sh
 CXX = /opt/local/bin/g++-mp-4.4
 OPT = -O3 -m64
 #CXX = g++
-#OPT = -g -O0 -m64 -fstack-check
+#OPT = -g -O0
 INC = -Ideps
 LIBS =
 WARN = -Wall -Wextra
