Disable cutoffs on SEE on qsearch.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -6,7 +6,9 @@
 # GNU Public License.                                                #
 ######################################################################
 
-CXX = /opt/local/bin/g++-mp-4.4
+#CXX = /opt/local/bin/g++-mp-4.4
+CXX = /Users/gingell/projects/mingw/prefix/bin/x86_64-pc-mingw32-g++
+
 OPT = -g -O3 -m64
 
 #CXX = g++ -g
