--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -6,12 +6,12 @@
 # GNU Public License.                                                #
 ######################################################################
 
-CXX = /opt/local/bin/g++-mp-4.4
+#CXX = g++
+CXX = /opt/local/bin/g++-mp-4.5
 #CXX = /Users/gingell/projects/mingw/prefix/bin/x86_64-pc-mingw32-g++
 
 OPT = -g -O3 -m64
-
-#CXX = g++ -g
+#OPT = -g3
 
 SHELL = /bin/sh
 INC = -Ideps
