Minor cleanup and refactoring.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -36,9 +36,9 @@ CXXFLAGS = $(OPT) $(ALG) $(INC) $(LIBS) $(VSN) $(WARN) $(DEBUG)
 #                                                                      #
 ########################################################################
 
-ALG = -DENABLE_QSEARCH -DENABLE_PVS -DENABLE_ASPIRATION_WINDOW		\
--DENABLE_NULL_MOVE -DENABLE_EXTENSIONS -DENABLE_TRANS_TABLE		\
--DENABLE_FUTILITY -DENABLE_SEE # -DENABLE_RAZORING # -DENABLE_LMR
+ALG = -DENABLE_QSEARCH -DENABLE_PVS -DENABLE_ASPIRATION_WINDOW	\
+-DENABLE_NULL_MOVE -DENABLE_EXTENSIONS -DENABLE_TRANS_TABLE	\
+-DENABLE_FUTILITY -DENABLE_SEE -DENABLE_RAZORING
 
 DEBUG = # -DTRACE_EVAL
 
