Fix bug in En Passant handling introduced in previous revision.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -11,7 +11,8 @@
 CXX = /opt/local/bin/g++-mp-4.5
 #CXX = /Users/gingell/projects/mingw/prefix/bin/x86_64-pc-mingw32-g++
 
-OPT = -g3 -O3 -m64
+#OPT = -g3 -O3 -m64
+OPT = -g3
 
 SHELL = /bin/sh
 INC = -Ideps
