Rewrite move ordering code along the lines Ed Schroder discusses at  http://members.home.nl/matador/chess840.htm.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -38,7 +38,7 @@ CXXFLAGS = $(OPT) $(ALG) $(INC) $(LIBS) $(VSN) $(WARN) $(DEBUG)
 
 ALG = -DENABLE_QSEARCH -DENABLE_PVS -DENABLE_ASPIRATION_WINDOW	\
 -DENABLE_NULL_MOVE -DENABLE_TRANS_TABLE -DENABLE_FUTILITY	\
--DENABLE_RAZORING -DENABLE_EXTENSIONS # -DENABLE_SEE
+-DENABLE_RAZORING -DENABLE_EXTENSIONS -DENABLE_SEE
 
 DEBUG = # -DTRACE_EVAL
 
@@ -59,7 +59,7 @@ chesley: $(OBJS)
 ###############################
 
 XBOARD_OPTS = -debug -coords -autoflag -size Giant -thinking -xponder	\
--mg 1000 -sgf out.pgn
+-sgf out.pgn
 
 # Launch an xboard session with Chesley.
 play: chesley
@@ -76,11 +76,11 @@ playold: chesley
 playother: chesley
 #	xboard -st 0:01 -fcp ./chesley -scp ./other_binaries/amundsen -mg 100 -mode TwoMachines $(XBOARD_OPTS)
 #	xboard  -tc 1 -inc 0 -fcp ./chesley -scp ./arasan -mg 100 -mode TwoMachines $(XBOARD_OPTS)
-#	xboard  -st 0:01  -fcp ./chesley -scp ./other_binaries/zct -mg 1000 -mode TwoMachines $(XBOARD_OPTS)
+	xboard  -tc 0:20 -fcp ./chesley -scp ./other_binaries/zct -mg 1000 -mode TwoMachines $(XBOARD_OPTS)
 #	xboard -tc 0:30 -inc 0 -fcp ./chesley -scp ./other_binaries/tscp -mg 1000 -mode TwoMachines $(XBOARD_OPTS)
 #	xboard -tc 1 -fcp ./chesley -scp ./other_binaries/gray -mg 100 -mode TwoMachines $(XBOARD_OPTS)
 #	xboard -tc 1 -mps 60 -fcp ./chesley -scp gnuchess -mg 1000 -mode TwoMachines $(XBOARD_OPTS)
-	xboard -tc 1 -mps 60 -fcp ./chesley -scp ./other_binaries/olithink -mg 100 -mode TwoMachines $(XBOARD_OPTS)
+#	xboard -tc 1 -mps 60 -fcp ./chesley -scp ./other_binaries/olithink -mg 100 -mode TwoMachines $(XBOARD_OPTS)
 #	xboard -st 0:01 -fcp ./chesley -scp ./other_binaries/GreKo -mg 100 -mode TwoMachines $(XBOARD_OPTS)
 
 #######################
