--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -30,20 +30,18 @@ SRCS = $(wildcard *.cpp)
 VSN = -DSVN_REVISION=\"$(shell svnversion)\"
 CXXFLAGS = $(OPT) $(PROF) $(ALG) $(INC) $(VSN) $(WARN) $(DEBUG)
 
-########################################################################
-#                                                                      #
+########################################################################                                                                     
 # Search configuration.                                                #
-#                                                                      #
+#								       #
 # The following macros are used to enable and disable various parts of #
-# the tree search. Valid options are: ENABLE_ASPIRATION_WINDOW,	       #
-# ENABLE_TRANS_TABLE, ENABLE_QSEARCH, ENABLE_NULL_MOVE, ENABLE_SEE,    #
-# -DENABLE_PVS, -DENABLE_LMR, -DENABLE_FUTILITY, -DENABLE_RAZORING     #
-#                                                                      #
+# the tree search. Valid options are: ENABLE_ASPIRATION_WINDOW,        #
+# ENABLE_TRANS_TABLE, ENABLE_NULL_MOVE, ENABLE_SEE, -DENABLE_PVS,      #
+# -DENABLE_LMR, -DENABLE_FUTILITY, -DENABLE_RAZORING		       #
 ########################################################################
 
-ALG = -DENABLE_QSEARCH -DENABLE_PVS -DENABLE_ASPIRATION_WINDOW	\
--DENABLE_NULL_MOVE -DENABLE_TRANS_TABLE -DENABLE_FUTILITY	\
--DENABLE_RAZORING -DENABLE_EXTENSIONS -DENABLE_LMR -DENABLE_SEE
+ALG = -DENABLE_PVS -DENABLE_ASPIRATION_WINDOW -DENABLE_NULL_MOVE	\
+-DENABLE_TRANS_TABLE -DENABLE_FUTILITY -DENABLE_RAZORING		\
+-DENABLE_EXTENSIONS -DENABLE_LMR -DENABLE_SEE
 
 DEBUG = # -DTRACE_EVAL
 
@@ -72,12 +70,30 @@ play: chesley
 
 # Run an xboard game of Chesley against Chesley.
 playself: chesley
-	xboard -tc 1 -mps 100 -fcp ./chesley -scp ./chesley -mode TwoMachines $(XBOARD_OPTS)
+	rm -f out.pgn
+	xboard -tc 1 -mps 100 -fcp ./chesley -scp ./chesley -mode	\
+TwoMachines $(XBOARD_OPTS)
+
+# Generate a pgn file of games against different engines.
+out.pgn:
+	make playother
 
 # Run an xboard game of Chesley against another engine.
 playother: chesley
-	xboard -tc 1 -mg 1000 -fcp ./chesley -scp other_binaries/zct	\
--mode TwoMachines $(XBOARD_OPTS)
+	rm -f out.pgn
+	xboard -tc 5 -mps 40 -mg 5 -fcp ./chesley -scp  \
+gnuchess -mode TwoMachines $(XBOARD_OPTS)
+	xboard -tc 5 -mps 40 -mg 5 -fcp ./chesley -scp	\
+other_binaries/exchess -mode TwoMachines $(XBOARD_OPTS)
+	xboard -tc 5 -mps 40 -mg 5 -fcp ./chesley -scp	\
+other_binaries/zct -mode TwoMachines $(XBOARD_OPTS)
+	xboard -tc 5 -mps 40 -mg 5 -fcp ./chesley -scp	\
+other_binaries/GreKo -mode TwoMachines $(XBOARD_OPTS)
+
+# Annotate out.pgn using Crafty.
+annotate: out.pgn
+	printf "smpmt=2\nannotateh out.pgn Chesley other_binaries/crafty 1-999	\
+2 5\n" | other_binaries/crafty
 
 #############
 # Clean up. #
@@ -87,4 +103,4 @@ clean :
 	rm -rf chesley *.exe *.inc a.out *.o *.dSYM *~ TAGS *.gcda	\
 	      a.out Saturn* game.00* log.* logfile.* book.lrn		\
 	      position.bin position.lrn *.d /cores/core.* *.fen \#*\#	\
-	      *.log log.0* game.0* *mshark *.s
+	      *.log log.0* game.0* *mshark *.s out.pgn
