Change time management in iterative deepening. If we have less than  20% of the time we started with left on the clock, then assume we will  not be able to finish search an additional ply.
Add code to extend the principle variation returned by a search from
 the transposition table. This helps ensure we have a long enough PV
 to ponder from.

Add code to support the "?" XBoard command.

Fix serious IO buffering problem introduced on Unix in the previous
 revision.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -10,15 +10,15 @@
 # Building for POSIX #
 ######################
 
-#CXX=g++
+CXX=g++
 
 ########################
 # Building for Windows #
 ########################
 
-#CXX=/Users/gingell/projects/mingw/prefix/bin/x86_64-pc-mingw32-c++
-CXX=i386-mingw32-g++
-EXT=.exe
+#CXX=/Users/gingell/projects/mingw/prefix/bin/i386-mingw32-g++
+#CXX=i386-mingw32-g++
+#EXT=.exe
 
 OPT = -g3 -O3 -m64
 PROF =
