Further work on new evaluation strategy.

--- a/chesley/branches/new-eval/Makefile
+++ b/chesley/branches/new-eval/Makefile
@@ -20,7 +20,7 @@ CXX=g++
 #CXX=i386-mingw32-g++
 #EXT=.exe
 
-OPT = -g3 -m64 -O3
+OPT = -g3 -m64 -O3 # -DTRACE_EVAL
 PROF =
 INC = -Ideps
 LIBS = 
@@ -68,7 +68,7 @@ chesley: $(OBJS)
 #XBOARD_OPTS = -debug -coords -autoflag -size Giant -thinking -xponder	\
 -sgf out.pgn
 
-XBOARD_OPTS = -debug -coords -autoflag -size Giant -thinking -xponder	\
+XBOARD_OPTS = -debug -coords -autoflag -size Small -thinking -xponder	\
 -sgf out.pgn
 
 # Launch an xboard session with Chesley.
